--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>StrataPaint</title>
+    <title>Kromacut</title>
     </head>
     <body>
         <div id="root"></div>
