feat: add meta tags for improved SEO and social sharing in index.html and site.webmanifest

--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Kromacut — reduce images to small palettes and generate stacked color-layer 3D previews. Configure per-color slice heights and export printable STL models."
+        />
+        <meta
+            name="keywords"
+            content="Kromacut, 3D printing, palette quantization, STL export, image to 3D, layered print, color slicing"
+        />
+        <meta name="author" content="vycdev" />
+        <meta name="robots" content="index,follow" />
+
+        <!-- Open Graph / social -->
+        <meta property="og:title" content="Kromacut" />
+        <meta
+            property="og:description"
+            content="Generate stacked color-layer 3D prints from images. Reduce palettes, preview 3D stacks, and export STL models."
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://github.com/vycdev/Kromacut" />
+        <!-- If you have a hosted cover image, replace the URL below -->
+        <meta property="og:image" content="/android-chrome-512x512.png" />
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Kromacut" />
+        <meta
+            name="twitter:description"
+            content="Generate stacked color-layer 3D prints from images. Reduce palettes, preview 3D stacks, and export STL models."
+        />
+        <meta name="twitter:image" content="/android-chrome-512x512.png" />
         <title>Kromacut</title>
     </head>
     <body>
